# rubiks_cube

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build_and_test.yml
src/: glad.c  stb_image.cpp
src/algorithm/: cube_bg_model.cpp  cube_bg_model.h  solver.cpp  solver.h
src/algorithm/human_algorithm/: human_algo.cpp  human_algo.h
src/algorithm/thistlethwaite/: astar.cpp  astar.h  groups.h  phases.h  searcher.cpp  searcher.h  thistlethwaite.cpp  thistlethwaite.h
src/algorithm/thistlethwaite/Goals/: G0_G1_goal.cpp  G0_G1_goal.h  G1_G2_goal.cpp  G1_G2_goal.h  G2_G3_goal.cpp  G2_G3_goal.h  G3_G4_goal.cpp  G3_G4_goal.h  goal.h
src/algorithm/thistlethwaite/database/: database.cpp  database.h  phase1_database.cpp  phase1_database.h  phase2_database.cpp  phase2_database.h  phase3_database.cpp  phase3_database.h  phase4_database.cpp  phase4_database.h
src/algorithm/thistlethwaite/phase_info/: phase1_info.cpp  phase1_info.h  phase2_info.cpp  phase2_info.h  phase3_info.cpp  phase3_info.h  phase4_info.cpp  phase4_info.h  phase_info.h
src/algorithm/thistlethwaite/utilities/: Rubiks Cube Indices.ods  db_generator.cpp  db_generator.h  indexer.h  rankers.h  rn_generator.h  search_utilities.cpp  searchutil.cpp  searchutil.h  timer.h  visualizer.h
src/controller/: app.cpp  app.h
src/include/: Cube.h
src/lib/: Cube.cpp
src/model/: camera.cpp  camera.h  cube.cpp  cube.h  scene.cpp  scene.h
src/shaders/: fragment.txt  vertex.txt
src/tests/: Cube_tests.cpp  a.out  cube_bg_model_tests.cpp
src/view/: cube_mesh.cpp  cube_mesh.h  renderer.cpp  renderer.h  resource_load.cpp  resource_load.h
